# spongebot

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: absorption.yaml  branding.yaml  lockdown.yaml  skills.yaml  spongebot.yaml
scripts/: RECORD_GIF.md  demo_session.py
src/: __init__.py  mcp_server.py
src/absorption/: __init__.py  agent_absorption.py  document_absorption.py  engine.py  evolutionary_absorption.py  experience_absorption.py  failure_absorption.py  federated_absorption.py
src/cli/: __init__.py  main.py  splash.py  themes.py
src/core/: config.py  spongebot.py
src/learning/: __init__.py  engine.py
src/llm/: __init__.py  client.py
src/lockdown/: __init__.py  anthropic_gate.py  crypto_binding.py  environment_scanner.py  exceptions.py  gate.py  hardware_fingerprint.py  lockout_manager.py  model_verifier.py  response_fingerprint.py  self_destruct_trigger.py  tamper_detector.py
src/memory/: __init__.py  hybrid_memory.py  sqlite_store.py
src/personality/: __init__.py  persona.py
src/security/: __init__.py  audit_chain.py  memguard.py  self_destruct.py  vault_core.py
src/skills/: __init__.py  dag.py
src/token_saver/: __init__.py  _engine.py  _interface.py
tests/: conftest.py  smoke_test.py
tests/unit/: test_absorption.py  test_audit_chain.py  test_config.py  test_learning.py  test_lockdown.py  test_skill_dag.py  test_token_saver.py  test_vault.py
