[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "spongebot"
version = "0.2.0"
description = "Absorption-Based AI Agent Framework — Anthropic Claude Only"
requires-python = ">=3.11"
license = {text = "Proprietary"}
keywords = ["ai", "agents", "absorption", "anthropic", "claude"]

dependencies = [
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "cryptography>=43.0",
    "networkx>=3.3",
    "rich>=13.9",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.scripts]
spongebot = "src.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
