[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spongebot"
version = "0.2.0"
description = "Absorption engine for Claude with persistent skill graph, exposed as an MCP server."
requires-python = ">=3.11"
license = {text = "Proprietary"}
keywords = ["ai", "agents", "absorption", "anthropic", "claude", "mcp"]

dependencies = [
    "mcp>=1.0",
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "cryptography>=43.0",
    "networkx>=3.3",
    "rich>=13.9",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.scripts]
spongebot = "src.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
